<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#42000000">

    <com.google.android.exoplayer2.ui.DefaultTimeBar
        android:id="@id/exo_progress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="5dp"
        android:layout_marginBottom="40dp"
        app:buffered_color="#80FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:played_color="@color/white"
        app:scrubber_color="@color/white"
        app:scrubber_disabled_size="8dp"
        app:scrubber_enabled_size="13dp"
        app:unplayed_color="#80FFFFFF" />

    <LinearLayout
        android:id="@+id/topController"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#42000000"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/backBtn"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:backgroundTint="@android:color/transparent"
            android:contentDescription="@string/back_btn"
            android:src="@drawable/back_icon"
            app:tint="@color/icon_color_player_activity" />

        <TextView
            android:id="@+id/videoTitle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="10"
            android:ellipsize="marquee"
            android:gravity="center"
            android:marqueeRepeatLimit="marquee_forever"
            android:singleLine="true"
            android:text="@string/video_name"
            android:textColor="@color/text_color_player_activity"
            android:textSize="16sp"
            android:textStyle="bold" />

        <ImageButton
            android:id="@+id/moreFeaturesBtn"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginEnd="50dp"
            android:backgroundTint="@android:color/transparent"
            android:contentDescription="@string/menu"
            android:padding="10dp"
            android:src="@drawable/menu_icon"
            app:tint="@color/icon_color_player_activity" />

    </LinearLayout>

    <ImageButton
        android:id="@+id/playPauseBtn"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:background="@android:color/transparent"

        android:contentDescription="@string/play_btn"

        android:src="@drawable/play_icon"
        android:layout_margin="80dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/icon_color_player_activity" />


    <LinearLayout
        android:id="@+id/bottomController"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="end|bottom"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageButton
            android:id="@+id/orientationBtn"
            android:layout_width="45dp"
            android:layout_height="match_parent"
            android:background="?attr/selectableItemBackground"
            android:contentDescription="@string/orientation"
            android:src="@drawable/orientation_icon"
            app:tint="@color/icon_color_player_activity" />

        <ImageButton
            android:id="@+id/repeatBtn"
            android:layout_width="45dp"
            android:layout_height="match_parent"
            android:background="?attr/selectableItemBackground"
            android:contentDescription="@string/repeat_btn"
            android:src="@drawable/exo_icon_repeat_off"
            app:tint="@color/icon_color_player_activity"
            tools:ignore="PrivateResource" />

        <ImageButton
            android:id="@+id/prevBtn"
            android:layout_width="45dp"
            android:layout_height="match_parent"
            android:background="?attr/selectableItemBackground"
            android:contentDescription="@string/prev_btn"
            android:src="@drawable/prev_icon"
            app:tint="@color/icon_color_player_activity" />

        <ImageButton
            android:id="@+id/nextBtn"
            android:layout_width="45dp"
            android:layout_height="match_parent"
            android:background="?attr/selectableItemBackground"
            android:contentDescription="@string/next_btn"
            android:src="@drawable/next_icon"
            app:tint="@color/icon_color_player_activity" />

        <ImageButton
            android:id="@+id/fullScreenBtn"
            android:layout_width="45dp"
            android:layout_height="match_parent"
            android:background="?attr/selectableItemBackground"
            android:contentDescription="@string/fullscreen_btn"
            android:src="@drawable/fullscreen_icon"
            app:tint="@color/icon_color_player_activity" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@id/exo_position"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/duration"
            android:textColor="@color/white_deem"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:text="@string/semi_colon"
            android:textColor="@color/white_deem"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@id/exo_duration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/loading"
            android:textColor="@color/white_deem"
            android:textSize="16sp"
            android:textStyle="bold" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
