<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="7dp"
    android:background="?attr/themeColor"
    android:clickable="true"
    android:focusable="true"
    android:orientation="horizontal"
    android:layout_marginHorizontal="10dp"
    android:padding="2dp">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/id_video_thumbnail"
        android:layout_width="75dp"
        android:layout_height="55dp"
        android:contentDescription="@string/image"
        android:elevation="4dp"
        android:backgroundTint="@color/thum_back_color"
        app:shapeAppearanceOverlay="@style/curved" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="?attr/themeColor"
        android:orientation="vertical"
        android:paddingHorizontal="7dp">


        <TextView
            android:id="@+id/id_videoName"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:gravity="top"
            android:maxLines="2"
            android:text="@string/video_name"
            android:textColor="?attr/text_color_as_theme"/>

        <TextView
            android:id="@+id/id_folderName"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:maxLines="1"
            android:textColor="?attr/text_deem_color_as_theme"
            android:text="@string/folder_name" />

    </LinearLayout>

    <TextView
        android:id="@+id/id_duration"
        android:layout_width="wrap_content"
        android:layout_height="55dp"
        android:gravity="top"
        android:text="@string/duration"
        android:textColor="?attr/text_deem_color_as_theme" />
</LinearLayout>