<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="#8000"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/audioTrackBtn"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/audio_track"
            android:textAllCaps="false"
            android:textColor="@color/text_color_player_activity"
            app:icon="@drawable/audio_track_icon"
            app:iconGravity="top"
            app:iconTint="@color/icon_color_player_activity" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/subtitlesBtn"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/subtitles"
            android:textAllCaps="false"
            android:textColor="@color/text_color_player_activity"
            app:icon="@drawable/subtitles_icon"
            app:iconGravity="top"
            app:iconTint="@color/icon_color_player_activity" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/audioBoosterBtn"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/booster"
            android:textAllCaps="false"
            android:textColor="@color/text_color_player_activity"
            app:icon="@drawable/booster_icon"
            app:iconGravity="top"
            app:iconTint="@color/icon_color_player_activity" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/speedBtn"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/speed"
            android:textAllCaps="false"
            android:textColor="@color/text_color_player_activity"
            app:icon="@drawable/speed_icon"
            app:iconGravity="top"
            app:iconTint="@color/icon_color_player_activity" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/sleepTimerBtn"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/sleep_timer"
            android:textAllCaps="false"
            android:textColor="@color/text_color_player_activity"
            app:icon="@drawable/sleep_timer_icon"
            app:iconGravity="top"
            app:iconTint="@color/icon_color_player_activity" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/pipModeBtn"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/pip_mode"
            android:textAllCaps="false"
            android:textColor="@color/text_color_player_activity"
            app:icon="@drawable/pip_icon"
            app:iconGravity="top"
            app:iconTint="@color/icon_color_player_activity" />

    </LinearLayout>

</LinearLayout>