<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:layout_marginTop="10dp"
    android:background="?attr/themeColor"
    android:orientation="vertical"
    tools:context=".AboutActivity">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/privacyPolicyBtn"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_margin="2dp"
        android:layout_marginTop="10dp"
        android:clickable="true"
        android:focusable="true"
        app:cardCornerRadius="2dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="?attr/themeColor"
            android:orientation="horizontal"
            tools:ignore="UseCompoundDrawables">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="7dp"
                android:layout_weight="1"
                android:text="@string/privacy_policy"
                android:textColor="?attr/text_color_as_theme"
                android:textSize="16sp"
                android:textStyle="normal" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="7dp"
                android:contentDescription="@string/privacy_policy"
                android:src="@drawable/navigate_next_icon" />
        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>
    <!--    <com.google.android.material.card.MaterialCardView-->
    <!--        android:id="@+id/termsOfUseBtn"-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="40dp"-->
    <!--        android:layout_marginTop="4dp"-->
    <!--        android:clickable="true"-->
    <!--        android:focusable="true"-->
    <!--        android:layout_margin="2dp"-->
    <!--        app:shapeAppearanceOverlay="@style/curved">-->
    <!--        <LinearLayout-->
    <!--            android:layout_width="match_parent"-->
    <!--            android:layout_height="match_parent"-->
    <!--            android:orientation="horizontal">-->

    <!--            <TextView-->
    <!--                android:layout_width="0dp"-->
    <!--                android:layout_height="wrap_content"-->
    <!--                android:layout_gravity="center_vertical"-->
    <!--                android:layout_marginStart="7dp"-->
    <!--                android:layout_weight="1"-->
    <!--                android:text="@string/terms_of_use"-->
    <!--                android:textColor="@color/black"-->
    <!--                android:textSize="16sp"-->
    <!--                android:textStyle="normal" />-->
    <!--            <ImageView-->
    <!--                android:layout_width="wrap_content"-->
    <!--                android:layout_height="wrap_content"-->
    <!--                android:layout_gravity="center_vertical"-->
    <!--                android:src="@drawable/navigate_next_icon"-->
    <!--                android:layout_marginEnd="7dp"-->
    <!--                android:contentDescription="@string/terms_of_use" />-->
    <!--        </LinearLayout>-->

    <!--    </com.google.android.material.card.MaterialCardView>-->

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="55dp"
        android:gravity="center_horizontal"
        android:text="@string/googly_player_for_android"
        android:textColor="?attr/text_color_as_theme"
        android:textSize="20sp"
        android:textStyle="normal" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:gravity="center_horizontal"
        android:text="@string/version"
        android:textColor="?attr/text_deem_color_as_theme"
        android:textSize="14sp"
        android:textStyle="bold" />

</LinearLayout>